syntax = "proto3";

package j5.source.v1;

import "buf/validate/validate.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/pentops/j5/gen/j5/source/v1/source_j5pb";

// Image is a parsed source image, similar to google.protobuf.Descriptor but
// with the J5 config, and some non-proto files
message SourceImage {
  repeated google.protobuf.FileDescriptorProto file = 1;
  repeated PackageInfo packages = 2;
  repeated ProseFile prose = 3;
  FakeOptions options = 4;
  repeated string source_filenames = 6;
  string source_name = 8;
  optional string version = 7;
}

// DEPRECATED: This isn't required.
message FakeOptions {
  repeated SubPackageType sub_packages = 1;
  optional GoPackageOptions go = 2;

  message SubPackageType {
    string name = 1;
  }

  message GoPackageOptions {
    string prefix = 1;
    repeated string trim_prefixes = 2;
    optional string suffix = 3;
  }
}
message ProseFile {
  string path = 1;
  bytes content = 2;
}

message CommitInfo {
  string owner = 1 [(buf.validate.field).required = true];
  string repo = 2 [(buf.validate.field).required = true];
  string hash = 3 [(buf.validate.field).required = true];

  google.protobuf.Timestamp time = 4 [(buf.validate.field).required = true];
  repeated string aliases = 5;
}

message PackageInfo {
  string label = 1;
  string name = 2;
  string prose = 3;
}
